--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "dev": "electron .",
+    "start": "nodemon --watch main.js --exec \"electron .\"",
+    "postinstall": "node node_modules/electron/install.js"
+  },
+  "config": {
+    "electron": {
+      "mirror": "https://registry.npmmirror.com/-/binary/electron/"
+    }
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -17,6 +24,10 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^24.1.3"
+    "electron": "^24.1.3",
+    "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "@electron/remote": "^2.0.9"
   }
 }
